RESOLVED FIXED240305
REGRESSION(r291038) [GTK][WPE] Fix build without remote inspector
https://bugs.webkit.org/show_bug.cgi?id=240305
Summary REGRESSION(r291038) [GTK][WPE] Fix build without remote inspector
Olivier Blin
Reported 2022-05-11 06:38:54 PDT
GLib ports do not build anymore without remote inspector after r291038.
Attachments
Patch (3.12 KB, patch)
2022-05-11 06:50 PDT, Olivier Blin
no flags
Patch (5.07 KB, patch)
2022-05-12 04:06 PDT, Olivier Blin
no flags
Olivier Blin
Comment 1 2022-05-11 06:50:20 PDT
Michael Catanzaro
Comment 2 2022-05-11 07:59:23 PDT
Comment on attachment 459163 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=459163&action=review > Source/WebKit/UIProcess/glib/WebProcessPoolGLib.cpp:126 > parameters.inspectorServerAddress = Inspector::RemoteInspector::inspectorServerAddress(); Would be nice to define it conditionally, too, so it doesn't exist at all except when ENABLE(REMOTE_INSPECTOR) is defined. Just a bit more robust to future changes, in case leaving it uninitialized is not OK in the future.
Olivier Blin
Comment 3 2022-05-12 04:06:28 PDT
EWS
Comment 4 2022-05-12 07:28:56 PDT
Committed r294103 (250488@main): <https://commits.webkit.org/250488@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 459220 [details].
Note You need to log in before you can comment on or make changes to this bug.