REGRESSION(r291038) [GTK][WPE] Fix build without remote inspector https://bugs.webkit.org/show_bug.cgi?id=240305

Patch by Olivier Blin <olivier.blin@softathome.com> on 2022-05-12
Reviewed by Michael Catanzaro.

* Shared/WebProcessCreationParameters.cpp:
(WebKit::WebProcessCreationParameters::encode const):
(WebKit::WebProcessCreationParameters::decode):
* Shared/WebProcessCreationParameters.h:
* UIProcess/glib/WebProcessPoolGLib.cpp:
(WebKit::WebProcessPool::platformInitializeWebProcess):
* WebProcess/glib/WebProcessGLib.cpp:
(WebKit::WebProcess::platformInitializeWebProcess):

Canonical link: https://commits.webkit.org/250488@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@294103 268f45cc-cd09-0410-ab3c-d52691b4dbfc