Source/WebKit/WebProcess/glib/WebProcessGLib.cpp
@@ -31,7 +31,10 @@
 #include "WebKitWebExtensionPrivate.h"
 #include "WebPage.h"
 #include "WebProcessCreationParameters.h"
+
+#if ENABLE(REMOTE_INSPECTOR)
 #include <JavaScriptCore/RemoteInspector.h>
+#endif
 
 #if USE(GSTREAMER)
 #include <WebCore/GStreamerCommon.h>
@@ -153,8 +156,10 @@ void WebProcess::platformInitializeWebProcess(WebProcessCreationParameters& para
     if (!parameters.applicationName.isEmpty())
         WebCore::setApplicationName(parameters.applicationName);
 
+#if ENABLE(REMOTE_INSPECTOR)
     if (!parameters.inspectorServerAddress.isNull())
         Inspector::RemoteInspector::setInspectorServerAddress(WTFMove(parameters.inspectorServerAddress));
+#endif
 
 #if USE(ATSPI)
     AccessibilityAtspi::singleton().connect(parameters.accessibilityBusAddress);
